edit create event to load database successfully

--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,10 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
         jcenter()
+            // ...
+            google() // Google's Maven repository
+
     }
 }
 
